--- a/contatooh/public/index.html
+++ b/contatooh/public/index.html
@@ -4,11 +4,11 @@
     <meta name="viewport" content="width=device-width">
     <meta charset="UTF-8">
   </head>
-  <body ng-controller="ContatosController">
-    <h1>Bem-vindo ao Contatooh</h1>
-    <button>Novo</button>
-    <p>Contatos cadastrados: {{total}}</p>
+  <body>
+    <div ng-view></div>
     <script src="vendor/angular/angular.js"></script>
+    <script src="vendor/angular-route/angular-route.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/controllers/ContatosController.js"></script>
   </body>
 </html>
