--- a/contatooh/public/index.html
+++ b/contatooh/public/index.html
@@ -15,5 +15,6 @@
     <script src="js/controllers/ContatosController.js"></script>
     <script src="js/controllers/ContatoController.js"></script>
     <script src="js/services/ContatoService.js"></script>
+    <script src="js/services/InterceptorService.js"></script>
   </body>
 </html>
